--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,11 @@
 doctype html
-html
+html(lang="en")
 	head
-		meta(charset='utf-8')
-		meta(http-equiv='X-UA-Compatible', content='IE=edge')
-		meta(name='description', content='')
-		meta(name='viewport', content='width=device-width, initial-scale=1')
+		meta(charset="utf-8")
+		meta(http-equiv="X-UA-Compatible', content='IE=edge, chrome=1")
+		meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
+		meta(name="apple-mobile-web-app-capable", content="yes")
+		link(rel="icon", type="image/png", href="/images/favicon.png")
 		
 		title #{title}
 		
@@ -73,5 +74,5 @@ html
 	div#footer
 		block footer
 			div.container
-				p(class="text-muted credit")
+				p(class="text-muted credit").
 					Stick Poser is a <a href="http://www.treesforlife.org">Treesforlife.org</a> project.
