--- a/views/layout.jade
+++ b/views/layout.jade
@@ -48,7 +48,7 @@ html(lang="en")
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a(class="navbar-brand", href="/") Stick Poser
+						a(class="navbar-brand", href="/") Visual Learning Center
 				
 					div(class="collapse navbar-collapse")
 						ul(class="nav navbar-nav")
@@ -60,6 +60,8 @@ html(lang="en")
 								a(href="/library") Library
 							li
 								a(href="/editor") Editor
+							li
+								a(href="/forum") Forum
 							li
 								a(href="/database") Database
 							li
