--- a/views/svg-edit.jade
+++ b/views/svg-edit.jade
@@ -18,20 +18,21 @@ html
 		link(rel="stylesheet", href="/stylesheets/editor/JQuerySpinBtn.css", type="text/css")
 		
 		//- Override jquery from layout.jade (needs to be 1.7.x)
-		script(src="/javascripts/editor/jquery.js")
+		script(src="/javascripts/editor/_combined.js")
+		//- script(src="/javascripts/editor/jquery.js")
 		
-		script(src="/javascripts/editor/jquery.hotkeys.min.js")
-		script(src="/javascripts/editor/jquery.bbq.min.js")
-		script(src="/javascripts/editor/jquery.svgicons.js")
-		script(src="/javascripts/editor/jquery.jgraduate.min.js")
-		script(src="/javascripts/editor/JQuerySpinBtn.min.js")
-		script(src="/javascripts/editor/touch.js")
+		//- script(src="/javascripts/editor/jquery.hotkeys.min.js")
+		//- script(src="/javascripts/editor/jquery.bbq.min.js")
+		//- script(src="/javascripts/editor/jquery.svgicons.js")
+		//- script(src="/javascripts/editor/jquery.jgraduate.min.js")
+		//- script(src="/javascripts/editor/JQuerySpinBtn.min.js")
+		//- script(src="/javascripts/editor/touch.js")
 		
 		//- This part can be compiled
-		script(src="/javascripts/editor/svgedit.js")
-		script(src="/javascripts/editor/jquery-svg.js")
-		script(src="/javascripts/editor//jquery.contextMenu.js")
-		script(src="/javascripts/editor/browser.js")
+		// - script(src="/javascripts/editor/svgedit.js")
+		//- script(src="/javascripts/editor/jquery-svg.js")
+		//- script(src="/javascripts/editor//jquery.contextMenu.js")
+		//- script(src="/javascripts/editor/browser.js")
 		script(src="/javascripts/editor/svgtransformlist.js")
 		script(src="/javascripts/editor/math.js")
 		script(src="/javascripts/editor/units.js")
