--- a/views/svg-edit.jade
+++ b/views/svg-edit.jade
@@ -18,9 +18,7 @@ html
 		link(rel="stylesheet", href="/stylesheets/editor/JQuerySpinBtn.css", type="text/css")
 		
 		//- Override jquery from layout.jade (needs to be 1.7.x)
-		script(src="/javascripts/editor/_combined.js")
 		//- script(src="/javascripts/editor/jquery.js")
-		
 		//- script(src="/javascripts/editor/jquery.hotkeys.min.js")
 		//- script(src="/javascripts/editor/jquery.bbq.min.js")
 		//- script(src="/javascripts/editor/jquery.svgicons.js")
@@ -33,29 +31,31 @@ html
 		//- script(src="/javascripts/editor/jquery-svg.js")
 		//- script(src="/javascripts/editor//jquery.contextMenu.js")
 		//- script(src="/javascripts/editor/browser.js")
-		script(src="/javascripts/editor/svgtransformlist.js")
-		script(src="/javascripts/editor/math.js")
-		script(src="/javascripts/editor/units.js")
-		script(src="/javascripts/editor/svgutils.js")
-		script(src="/javascripts/editor/sanitize.js")
-		script(src="/javascripts/editor/history.js")
-		script(src="/javascripts/editor/coords.js")
-		script(src="/javascripts/editor/recalculate.js")
-		script(src="/javascripts/editor/select.js")
-		script(src="/javascripts/editor/draw.js")
-		script(src="/javascripts/editor/path.js")
-		script(src="/javascripts/editor/svgcanvas.js")
-		script(src="/javascripts/editor/svg-editor.js")
-		script(src="/javascripts/editor/locale.js")
-		script(src="/javascripts/editor/contextmenu.js")
+		//- script(src="/javascripts/editor/svgtransformlist.js")
+		//- script(src="/javascripts/editor/math.js")
+		//- script(src="/javascripts/editor/units.js")
+		//- script(src="/javascripts/editor/svgutils.js")
+		//- script(src="/javascripts/editor/sanitize.js")
+		//- script(src="/javascripts/editor/history.js")
+		//- script(src="/javascripts/editor/coords.js")
+		//- script(src="/javascripts/editor/recalculate.js")
+		//- script(src="/javascripts/editor/select.js")
+		//- script(src="/javascripts/editor/draw.js")
+		//- script(src="/javascripts/editor/path.js")
+		//- script(src="/javascripts/editor/svgcanvas.js")
+		//- script(src="/javascripts/editor/svg-editor.js")
+		//- script(src="/javascripts/editor/locale.js")
+		//- script(src="/javascripts/editor/contextmenu.js")
 		
 		// you can load extensions here
-		script(src="/javascripts/editor/ext-panning.js")
+		//- script(src="/javascripts/editor/ext-panning.js")
 
 		// always minified scripts
-		script(src="/javascripts/editor/jquery-ui-1.8.17.custom.min.js")
-		script(src="/javascripts/editor//jpicker.js")
-		script(src="/javascripts/editor/ext-overview_window.js")
+		//- script(src="/javascripts/editor/jquery-ui-1.8.17.custom.min.js")
+		//- script(src="/javascripts/editor//jpicker.js")
+		//- script(src="/javascripts/editor/ext-overview_window.js")
+		
+		script(src="/javascripts/editor/_combined.js")
 		
 		// feeds
 		link(rel="alternate", type="application/atom+xml", title="SVG-edit General Discussion", href="http://groups.google.com/group/svg-edit/feed/atom_v1_0_msgs.xml")
